--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <div class="text">Hello, I am Shakti chaturvdei and I'm a <span>{Programmer}</span></div>
                 <p>an <span>&lt; Python Programmer &gt;</span> , a <span>&lt;Web Developer&gt;</span> ,   <span>&lt;Artificial Intelligence&gt;</span> , <span>&lt;Machine Learning&gt;</span>  and <span>&lt;Data Science&gt;</span> enthusiast.You can find me in various plateform of <strong>competitive Programming</strong> </p>
                 <div class="btn">
-                    <a href="https://drive.google.com/file/d/1MG8Jx1by2BaH_70xEA_47GG8yGKNw2RF/view?usp=share_link">View My Resume</a>
+                    <a href="https://drive.google.com/file/d/1CkRA4-CdMqS8Sh94-g0Ssic8Q3F711Au/view?usp=drive_link">View My Resume</a>
                 </div>
             </div>
 
