--- a/index.html
+++ b/index.html
@@ -167,29 +167,29 @@
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-code"></i>
-                        <div class="text">Paddle Ball Game</div>
+                        <div class="text">Real Estate Price Prediction</div>
                         <ul class="no-bullets">
-                            <li><a href="https://github.com/shakti2002/paddle__ball_game.py">Portfolio</a></li>
-                            <li><a href="https://github.com/shakti2002/paddle__ball_game.py">Paddle Ball Game(python)</a></li>
+                            <li><a href="https://github.com/shakti2002/Real_state_price_pridcition">Portfolio</a></li>
+                            <li><a href="https://github.com/shakti2002/Real_state_price_pridcition">Paddle Ball Game(python)</a></li>
                         </ul>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-chart-line"></i>
-                        <div class="text">Face Recognition Security Door Lock System </div>
+                        <div class="text">Virtual Assistant</div>
                         <ul class="no-bullets">
-                            <li><a href="https://github.com/shakti2002/FACE_RECOGINITION_SECURITY_SYSTEM"></a>Face Recognition Security Door Lock System </li>
-                            <li><a href="Face Recognition Security Door Lock System ">Using Raspberry Pi Operating System</a></li>
+                            <li><a href="https://github.com/shakti2002/Virtual__Assistant"></a>Face Recognition Security Door Lock System </li>
+                            <li><a href="Virtual Assistant">Using Raspberry Pi Operating System</a></li>
                         </ul>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <i class="fa-brands fa-app-store-ios"></i>
-                        <div class="text">Virtual Assistant</div>
+                        <div class="text">Amazon Website</div>
                             <ul class="no-bullets">
-                                <div><li><p><a  href="https://github.com/shakti2002/Virtual__Assistant">Voice Assistant</a></p></li></div>
+                                <div><li><p><a  href="https://github.com/shakti2002/amazon_clone">Voice Assistant</a></p></li></div>
                             </ul>
                     </div>
                 </div>
