--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
                         <i class="fas fa-code"></i>
                         <div class="text">Real Estate Price Prediction</div>
                         <ul class="no-bullets">
-                            <li><a href="https://github.com/shakti2002/Real_state_price_pridcition">Portfolio</a></li>
-                            <li><a href="https://github.com/shakti2002/Real_state_price_pridcition">Paddle Ball Game(python)</a></li>
+                            <li><a href="https://github.com/shakti2002/Real_state_price_pridcition">Python Numpy and Pandas for data cleaning, Matplotlib for data visualization Sklearn for model building,</a></li>
+                            <li><a href="https://github.com/shakti2002/Real_state_price_pridcition">Jupyter notebook, VS code and Python flask for http server, HTML/CSS/Javascript for UI</a></li>
                         </ul>
                     </div>
                 </div>
@@ -179,8 +179,8 @@
                         <i class="fas fa-chart-line"></i>
                         <div class="text">Virtual Assistant</div>
                         <ul class="no-bullets">
-                            <li><a href="https://github.com/shakti2002/Virtual__Assistant"></a>Face Recognition Security Door Lock System </li>
-                            <li><a href="Virtual Assistant">Using Raspberry Pi Operating System</a></li>
+                            <li><a href="https://github.com/shakti2002/Virtual__Assistant"></a>Python, Object Oriented Programming</li>
+                            <li><a href="Virtual Assistant"></a></li>
                         </ul>
                     </div>
                 </div>
@@ -189,7 +189,7 @@
                         <i class="fa-brands fa-app-store-ios"></i>
                         <div class="text">Amazon Website</div>
                             <ul class="no-bullets">
-                                <div><li><p><a  href="https://github.com/shakti2002/amazon_clone">Voice Assistant</a></p></li></div>
+                                <div><li><p><a  href="https://github.com/shakti2002/amazon_clone">HTML, CSS, JavaScript</a></p></li></div>
                             </ul>
                     </div>
                 </div>
