--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                         <div class="text">Real Estate Price Prediction</div>
                         <ul class="no-bullets">
                             <li><a href="https://github.com/shakti2002/Real_state_price_pridcition">Python Numpy and Pandas for data cleaning, Matplotlib for data visualization Sklearn for model building,</a></li>
-                            <li><a href="https://github.com/shakti2002/Real_state_price_pridcition">Jupyter notebook, VS code and Python flask for http server, HTML/CSS/Javascript for UI</a></li>
+                            <li><a href="https://github.com/shakti2002/Real_state_price_pridcition"></a></li>
                         </ul>
                     </div>
                 </div>
